tesla-public-key/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tesla-public-key
  labels:
    app: tesla-public-key
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tesla-public-key
  template:
    metadata:
      labels:
        app: tesla-public-key
    spec:
      containers:
        - name: nginx
          image: dockerhub.vshn.net/nginxinc/nginx-unprivileged:alpine
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: public-key
              mountPath: /usr/share/nginx/html/.well-known/appspecific
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: public-key
          configMap:
            name: tesla-public-key
        - name: nginx-conf
          configMap:
            name: tesla-public-key-nginx
