tesla-public-key/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tesla-public-key
spec:
  selector:
    app: tesla-public-key
  ports:
    - port: 8080
      targetPort: 8080
      name: http
