tesla-public-key/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tesla-public-key
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: fleet.aukia.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: tesla-public-key
                port:
                  number: 8080
  tls:
    - hosts:
        - fleet.aukia.com
      secretName: fleet-tls
