tesla-public-key/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: tesla-public-key
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  host: evcc.aukia.com
  path: /.well-known
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: tesla-public-key
    weight: 100
  port:
    targetPort: http
